# atlas-clean-code-oktober-2025

./: README.md
NimGameProject/: CMakeLists.txt  main.cpp
NimGameProject/de/atlas/client/: GameClient.h
NimGameProject/de/atlas/game/: AbstractGame.h  Game.h
NimGameProject/de/atlas/game/nimgame/: NimGameImpl.h
NimGameProject/de/atlas/game/nimgame/player/: AbstractNimGamePlayer.h  ComputerPlayer.h  HumanPlayer.h
NimGameProject/de/atlas/game/player/: AbstractPlayer.h  Player.h
ThreadDemo/: CMakeLists.txt  main.cpp
VctorFiller/: CMakeLists.txt  main.cpp
VectorFillerUebung/: CMakeLists.txt  main.cpp
VectorFillerUebung/atlas/bootstrap/: Bootstrap.h
VectorFillerUebung/atlas/client/: Client.h
VectorFillerUebung/atlas/client/impl/: ClientImpl.h
VectorFillerUebung/atlas/container/: AbstractVectorFactory.h  VectorFactory.h
VectorFillerUebung/atlas/container/impl/builder/: VectorFactoryBuilder.h
VectorFillerUebung/atlas/container/impl/decorator/: VectorFactoryBenchmarkDecorator.h  VectorFactoryLoggerDecorator.h  VectorFactorySecureDecorator.h
VectorFillerUebung/atlas/container/impl/parallel/: VectorFactoryAutoImpl.h  VectorFactoryParallelImpl.h
VectorFillerUebung/atlas/container/impl/sequential/: VectorFactorySequentialImpl.h
VectorFillerUebung/atlas/generator/: Generator.h
VectorFillerUebung/atlas/generator/impl/generic/: GenericGeneratorImpl.h
VectorFillerUebung/atlas/generator/impl/random/: MersenneTwisterNumberGenerator.h
VectorFillerUebung/atlas/time/: Stopwatch.h
VectorFillerUebung/atlas/time/impl/: StopwatchImpl.h
(+2 files in other folders)
